--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 h1 {
   color: sienna;
-  margin: 20px 10px;
+  margin: 1.2rem 0.8rem;
 }
 
 p {
@@ -25,8 +25,8 @@ ul li {
   color: grey;
 }
 
-header {
-  height: 5rem;
+.header {
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -34,36 +34,61 @@ header {
 
 .nav {
   line-height: 100%;
-  text-align: center;
+  height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 0.5rem;
 }
-
 .nav li {
   background-color: bisque;
   border: 1px solid gainsboro;
-  padding: 5px;
+  padding: 0.3rem;
 }
+
 .fotos {
-  padding: 5px 10px;
+  width: 50%;
+  margin: 1rem 1rem;
 }
 
 .foto {
+  display: block;
   width: 100%;
-  object-fit: contain;
-  border-radius: 5px;
+  border-radius: 0.3rem;
 }
 
 .section {
-  margin: 20px 10px;
-  padding: 5px 10px;
+  margin: 1rem 1rem;
+  padding: 0.5rem 1rem;
   background-color: rgb(230, 227, 224);
-  border-radius: 5px;
+  border-radius: 0.3rem;
 }
 
+.fotoAddTag {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 1rem 1em;
+  background-color: rgb(230, 227, 224);
+  border-radius: 0.3rem;
+  padding: 0.5rem 1rem;
+}
+
+.lists {
+  display: flex;
+  flex-wrap: wrap;
+}
+.button {
+  border: 1px solid gray;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 2px;
+  background-color: rgb(220, 196, 166);
+}
+
+.contact ul li {
+  margin: 0 10px;
+}
 .footer {
   margin: 20px;
   text-align: center;
