--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
   margin: 0;
   padding: 0;
 }
+.section {
+  margin: 0.5rem 0.5rem;
+  border: 1px solid gainsboro;
+  padding: 0.5rem 1rem;
+  background-color: rgb(244, 241, 238);
+  border-radius: 0.3rem;
+}
 
 h1 {
   color: sienna;
@@ -17,11 +24,12 @@ p {
 h2 {
   color: #1c062e;
   font-size: 1.5rem;
+  margin-bottom: 0.3rem;
 }
 h3 {
   font-size: 1.2rem;
 }
-ul li {
+li {
   color: grey;
 }
 
@@ -45,33 +53,19 @@ ul li {
   padding: 0.3rem;
 }
 
-.fotos {
-  width: 50%;
-  margin: 1rem 1rem;
-}
-
-.foto {
-  display: block;
-  width: 100%;
-  border-radius: 0.3rem;
-}
-
-.section {
-  margin: 1rem 1rem;
-  padding: 0.5rem 1rem;
-  background-color: rgb(230, 227, 224);
-  border-radius: 0.3rem;
-}
-
-.fotoAddTag {
+.foto_tags_container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  margin: 1rem 1em;
-  background-color: rgb(230, 227, 224);
+  gap: 0.8rem;
+}
+
+.foto_container {
+  flex-basis: 40%;
+  flex-grow: 1;
+}
+.foto {
+  width: 100%;
   border-radius: 0.3rem;
-  padding: 0.5rem 1rem;
 }
 
 .lists {
@@ -86,9 +80,16 @@ ul li {
   background-color: rgb(220, 196, 166);
 }
 
-.contact ul li {
-  margin: 0 10px;
+.link_to img {
+  width: 100%;
 }
+
+.signature p {
+  display: inline;
+  margin: 0 3rem 0 0;
+  font-family: cursive;
+}
+
 .footer {
   margin: 20px;
   text-align: center;
